# jlcpcb-basic-parts

./: .gitignore  .gitmodules  README.md  basic-parts.ipynb  pyproject.toml
docs/: _config.yml  index.md
docs/_components/: test.md
