[tool.poetry]
name = "jlcpcb-basic-parts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "jlcpcb_basic_parts"}]

[tool.poetry.dependencies]
python = ">=3.10,<4"
jupyter = "*"
rich = "^13.8.0"
pandas = "*"
zstandard = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
